--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/billion/public_html/Billionaires
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
+    - /bin/cp -R . $DEPLOYPATH
